<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/black">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/str_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/black_logo_400x150" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/str_profile"
            app:layout_constraintEnd_toStartOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/profile_user_icon_cyan" />

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-10dp"
            android:text="@string/prompt_name"
            android:textColor="@color/light_cyan"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/divider2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/profile_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/prompt_surname"
            android:textColor="@color/light_cyan"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/profile_name"
            app:layout_constraintTop_toBottomOf="@+id/profile_name" />

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/prompt_username"
            android:textColor="@color/light_cyan"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/profile_name"
            app:layout_constraintTop_toBottomOf="@+id/profile_surname" />

        <TextView
            android:id="@+id/profile_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/prompt_mail"
            android:textColor="@color/light_cyan"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/profile_surname"
            app:layout_constraintTop_toBottomOf="@+id/profile_username" />

        <TextView
            android:id="@+id/profile_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/str_plan"
            android:textColor="@color/light_cyan"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <View
            android:id="@+id/divider4"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@color/light_cyan"
            android:backgroundTint="@color/light_cyan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_plan" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/nav_bar_shape"
            app:itemBackground="@null"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/nav_bar"/>

</androidx.constraintlayout.widget.ConstraintLayout>