<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/str_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/black_logo_400x150" />

    <Button
        android:id="@+id/main_log_in"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_button"
        android:text="@string/button_log_in"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/main_how_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/main_sign_up"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_button"
        android:text="@string/button_sign_up"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_log_in"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/main_how_to"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button"
        android:onClick="dialogHowTo"
        android:paddingLeft="10dp"
        android:paddingTop="2dp"
        android:paddingRight="10dp"
        android:paddingBottom="2dp"
        android:text="@string/button_how_to"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/main_password"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:background="@drawable/text_shape"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_logo"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/main_username"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/text_shape"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/main_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/light_cyan"
        android:text="Stay Logged In*"
        android:textColor="@color/light_cyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_password" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*You have to stay logged in to get notification."
        android:textColor="@color/light_cyan"
        app:layout_constraintBottom_toTopOf="@+id/main_how_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_sign_up" />

</androidx.constraintlayout.widget.ConstraintLayout>