<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity"
    android:background="@color/black"
    android:keepScreenOn="true">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="-10dp"
        android:contentDescription="@string/str_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/black_logo_400x150" />

    <Button
        android:id="@+id/cam_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/str_start"
        android:onClick="joinChannel"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/cam_timer"
        app:layout_constraintEnd_toStartOf="@+id/divider_left"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cam_timer"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/cam_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/str_set"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/cam_qr"
        app:layout_constraintEnd_toStartOf="@+id/cam_stop"
        app:layout_constraintStart_toEndOf="@+id/cam_start"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/cam_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/str_stop"
        android:onClick="leaveChannel"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/cam_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toEndOf="@+id/divider_right"
        app:layout_constraintTop_toTopOf="@+id/cam_timer"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/cam_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_button"
        android:text="@string/str_qr"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider_middle"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/cam_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_button"
        android:text=" Log Out "
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider_middle"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <View
        android:id="@+id/divider_middle"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider_left"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/divider_middle"
        app:layout_constraintEnd_toStartOf="@+id/divider_middle"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider_right"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/divider_middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/divider_middle" />

    <FrameLayout
        android:id="@+id/camera_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="1.0">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>